--- a/forest.html
+++ b/forest.html
@@ -34,5 +34,7 @@
       <h1>FOREST</h1>
       <h2>GO GREEN</h2>
     </div>
+
+    <a class="next" href="./sea.html"><i class="fas fa-arrow-right"></i></a>
   </body>
 </html>
