--- a/mountains.html
+++ b/mountains.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Sea - Website Template</title>
+    <title>mountains - Website Template</title>
   </head>
   <style>
     * {
@@ -29,13 +29,10 @@
       </ul>
     </div>
 
-    <div class="img-slide sea-img animate__animated animate__slideInLeft"></div>
-    <div class="text animate__animated animate__fadeIn sea">
-      <h1>SEA</h1>
-      <h2>PLASTIC FREE</h2>
+    <div class="img-slide mountains-img animate__animated animate__slideInLeft"></div>
+    <div class="text animate__animated animate__fadeIn mountains">
+      <h1>MOUNTAINS</h1>
+      <h2>STAND UP</h2>
     </div>
-
-    <a class="previous" href="./forest.html"><i class="fas fa-arrow-left"></i></a>
-    <a class="next" href="./mountains.html"><i class="fas fa-arrow-right"></i></a>
   </body>
 </html>
