--- a/parks.html
+++ b/parks.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Mountains - Website Template</title>
+    <title>Parks - Website Template</title>
   </head>
   <style>
     * {
       margin: 0;
       padding: 0;
+    }
+    .previous {
+      right: 20px;
     }
   </style>
   <body>
@@ -29,13 +32,12 @@
       </ul>
     </div>
 
-    <div class="img-slide mountains-img animate__animated animate__slideInLeft"></div>
-    <div class="text animate__animated animate__fadeIn mountains">
-      <h1>MOUNTAINS</h1>
-      <h2>STAND UP</h2>
+    <div class="img-slide parks-img animate__animated animate__slideInLeft"></div>
+    <div class="text animate__animated animate__fadeIn parks">
+      <h1>PARKS</h1>
+      <h2>PROTECT IT</h2>
     </div>
 
-    <a class="previous" href="./sea.html"><i class="fas fa-arrow-left"></i></a>
-    <a class="next" href="./parks.html"><i class="fas fa-arrow-right"></i></a>
+    <a class="previous" href="./mountains.html"><i class="fas fa-arrow-left"></i></a>
   </body>
 </html>
