--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
         margin-top: 10px;
       }
       form {
-        width: 30%;
+        width: 40%;
         position: absolute;
-        top: 5%;
-        left: 5%;
-        margin: 0 auto;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         display: block;
         text-align: center;
       }
@@ -59,34 +59,48 @@
       input:focus, textarea:focus {
         outline: 0;
       }
-      @media screen and (max-width: 980px) {
+      @media screen and (max-width: 1280px) {
         h1, h2 {
-          font-size: 48px;
-          font-weight: 500;
-          margin-top: 80px;
+          font-size: 42px;
+          margin-top: 40px;
         }
         h2 {
-          font-size: 48px;
-          font-weight: 400;
-          margin-top: 0px;
+          font-size: 24px;
+          margin-top: -5px;
         }
         form {
-          width: 90%;
-          margin-top: 190px;
+          padding-top: 30px;
+        }
+      }
+      @media screen and (max-width: 1080px) {
+        h1, h2 {
+          margin-top: 40px;
+        }
+        h2 {
+          margin-top: 0;
+        }
+        form {
+          margin-top: 0px;
+        }
+      }
+      @media screen and (max-width: 980px) {
+        h1, h2 {
+          display: none;
+        form {
+          width: 80%;
+          top: 50%;
+          margin-top: 100px;
         }
         input[type=text], [type=email], textarea {
-          font-size: 42px;
-          padding: 38px 0 38px 42px;
-          border: 2px solid #333;
-          margin-top: 36px;
-          margin-bottom: 24px;
-          resize: vertical;
+          margin-top: 16px;
+          margin-bottom: 18px;
+          font-size: 1.8em;
+          padding: 21px 0 21px 25px;
         }
         input[type=submit] {
-          font-size: 50px;
-          padding: 46px 0px;
           margin-top: 24px;
         }
+      }
       }
     </style>
   </head>
