--- a/contact.html
+++ b/contact.html
@@ -85,11 +85,20 @@
       }
       @media screen and (max-width: 980px) {
         h1, h2 {
-          display: none;
+          font-size: 4em;
+          font-weight: 500;
+          margin-top: 10px;
+        }
+        h2 {
+          font-size: 2.5em;
+          font-weight: 400;
+          margin-top: 0px;
+        }
         form {
           width: 80%;
-          top: 50%;
-          margin-top: 100px;
+          top: 20%;
+          margin-top: 0px;
+          padding-top: 350px;
         }
         input[type=text], [type=email], textarea {
           margin-top: 16px;
