--- a/contact.html
+++ b/contact.html
@@ -85,29 +85,35 @@
       }
       @media screen and (max-width: 980px) {
         h1, h2 {
-          font-size: 4em;
+          font-size: 6em;
           font-weight: 500;
           margin-top: 10px;
+          padding: 0 30px;
         }
         h2 {
-          font-size: 2.5em;
+          font-size: 3.5em;
           font-weight: 400;
           margin-top: 0px;
         }
         form {
+          position: relative;
           width: 80%;
-          top: 20%;
+          top: -240px;
+          left: 10%;
+          transform: none;
           margin-top: 0px;
           padding-top: 350px;
         }
         input[type=text], [type=email], textarea {
           margin-top: 16px;
           margin-bottom: 18px;
-          font-size: 1.8em;
-          padding: 21px 0 21px 25px;
+          font-size: 2em;
+          padding: 32px 0 32px 40px;
         }
         input[type=submit] {
+          font-size: 2em;
           margin-top: 24px;
+          padding: 30px 0 30px 40px;
         }
       }
       }
