--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>About - Website Template</title>
   </head>
@@ -67,6 +68,52 @@
     .work a:hover {
       background-color: #4D4D4D;
     }
+    @media screen and (max-width: 980px) {
+      .header{
+        width: 105%;
+        height:40%;
+        left:-3%;
+        position:absolute;
+        background-image: linear-gradient(#8459f9, #4c3196);
+        border-top-left-radius:10px;
+        border-top-right-radius:10px;
+        border-bottom-left-radius: 50% 20%;
+        border-bottom-right-radius: 50% 20%;
+      }
+      .container{
+        width: 100vw;
+        height:100vh;
+        background-color: #F2F2F2;
+        position:absolute;
+        top: 18%;
+        overflow:hidden;
+        left: 50%;
+        transform:translate(-50%,-25%);
+      }
+      img {
+        display: none;
+      }
+      .work {
+        width: 100%;
+        top: 10%;
+        left: 0;
+      }
+      .work h1 {
+        font-size: 6em;
+        line-height: inherit;
+        padding: 30px 0 0 0;
+      }
+      .work h3 {
+        font-size: 4em;
+        padding-top: 160px;
+      }
+      .work a {
+        width: 70%;
+        margin-top: 100px;
+        padding: 16px 0;
+        font-size: 3em;
+      }
+    }
   </style>
   <body>
     <input type="checkbox" id="active" />
@@ -83,6 +130,10 @@
 
     <!--<div class="img-slide about-img animate__animated animate__slideInDown"></div>
     <h1 class="delete">ABOUT US</h1>-->
+
+    <div class="container">
+      <div class="header"></div>
+    </div>
 
     <img src="./img/progress.svg" />
 
